# effective_modern_cpp

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml  main.yml
includes/: namespaces.h
lib/: CMakeLists.txt  namespaces.cpp  shape.cpp
test/: CMakeLists.txt  test_1.cpp  test_2.cpp
